--- a/style.css
+++ b/style.css
@@ -125,6 +125,41 @@ nav ul li.dropdown {
   color: #333;
 }
 
+.search-box {
+  margin: 40px auto;
+  max-width: 300px;
+}
+
+.search-box input[type="text"] {
+  width: 70%;
+  padding: 8px;
+  border: 2px solid #aaa;
+  border-radius: 6px;
+  font-size: 1rem;
+}
+
+.search-icon {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 8px;
+  font-size: 1.4rem;
+}
+
+.search-box button {
+  margin-top: 20px;
+  padding: 10px 24px;
+  background-color: #33aaff;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.search-box button:hover {
+  background-color: #2288dd;
+}
+
 /* HERO SECTION */
 .hero {
   background: url('fond.png') center/cover no-repeat;
@@ -259,4 +294,75 @@ footer p {
     order: 1;
     height: 80px;
   }
+}
+
+/* RENDEZ-VOUS */
+.rdv-container {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
+
+.rdv-box {
+  display: flex;
+  background-color: #d5ebff;
+  padding: 20px;
+  border-radius: 12px;
+  width: 80%;
+  max-width: 600px;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.rdv-photo {
+  text-align: center;
+  width: 100px;
+  flex-shrink: 0;
+}
+
+.rdv-photo img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 8px;
+}
+
+.rdv-photo p {
+  font-size: 0.8rem;
+  color: #333;
+}
+
+.rdv-details {
+  flex-grow: 1;
+  padding-left: 20px;
+  text-align: left;
+}
+
+.rdv-details h2 {
+  margin-bottom: 10px;
+  font-size: 1.2rem;
+  color: #0a7abf;
+}
+
+.rdv-details p {
+  margin: 4px 0;
+  font-size: 0.95rem;
+}
+
+.btn-annuler {
+  background-color: #33aaff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  margin-top: 10px;
+  cursor: pointer;
+  font-size: 0.95rem;
+  transition: background-color 0.3s;
+}
+
+.btn-annuler:hover {
+  background-color: #2288dd;
 }
