--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav ul li {
 
 nav a {
   text-decoration: none;
-  color: #0e0c0c;
+  color: #ffffff;
   font-weight: 500;
   padding: 8px 12px;
 }
@@ -365,4 +365,15 @@ footer p {
 
 .btn-annuler:hover {
   background-color: #2288dd;
+}
+
+.past-label {
+  display: inline-block;
+  margin-top: 10px;
+  background-color: #cccccc;
+  color: #333;
+  padding: 8px 16px;
+  border-radius: 8px;
+  font-weight: bold;
+  font-size: 0.95rem;
 }
